src/objects/Standard_Price__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Book_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book Entry</label>
        <referenceTo>Price_Book_Entry__c</referenceTo>
        <relationshipLabel>Standard Price</relationshipLabel>
        <relationshipName>Standard_Price</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Products</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Standard Price</relationshipLabel>
        <relationshipName>Standard_Price</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Price__c</fullName>
        <label>Standard Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Standard Price</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Standard Price Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Price</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>